# f5a-services-example

./: .gitignore  Cargo.toml  compose.yml  justfile  readme.md
.github/workflows/: ci.yml
collections/: users.http
migration/: Cargo.toml
migration/src/: lib.rs  m20250928_230740_create_user_table.rs
schemas/: Cargo.toml
schemas/src/: lib.rs  user.rs
src/: context.rs  error.rs  lib.rs  main.rs  pagination.rs  routes.rs  validators.rs
src/commands/: create_user.rs  delete_user.rs  mod.rs  partial_update_user.rs  update_user.rs
src/handlers/: mod.rs  root.rs  users.rs
src/om/: mod.rs
src/queries/: mod.rs
src/response/: bad_request.rs  field.rs  mod.rs  problem_details.rs  unprocessable_entity.rs
src/root/http/handlers/: mod.rs
src/shared/: error.rs  mod.rs  pagination.rs
src/shared/response/: bad_request.rs  problem_details.rs  unprocessable_entity.rs
src/shared/trace/: mod.rs  request_id_span.rs
src/shared/validators/: password_strength.rs
src/users/: mod.rs
src/users/application/commands/: create_user.rs  delete_user.rs  partial_update_user.rs  update_user.rs
src/users/application/queries/: mod.rs  read_user.rs  read_users.rs
src/users/http/handlers/: create_user.rs  delete_user.rs  mod.rs  partial_update_user.rs  read_user.rs  read_users.rs  update_user.rs  users.rs
src/users/persistence/: mod.rs  uow.rs
src/users/persistence/dao/: mod.rs
src/users/persistence/repository/: mod.rs
tests/: integration_test.rs
tests/setup/: mod.rs
tests/test_ext/: mod.rs
tests/users/: create.rs  detail.rs  migrations.rs  mod.rs  paginated.rs  update.rs
