[package]
name = "f5a_services"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration", "schemas"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.4" }
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
schemas = { path = "./schemas" }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
schemas = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
