[package]
name = "f5a_services"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration", "schemas"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.4" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
sea-orm = { version = "1.1.17", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
schemas = { path = "./schemas" }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "propagate-header",
    "request-id",
    "cors",
] }
tower = { version = "0.5.2", features = ["util"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
schemas = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
mime = "0.3"
serde_json = { workspace = true }
http-body-util = "0.1"
